--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "element-plus": "^2.3.3",
     "pinia": "^2.0.34",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
