--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-    "recommendations": ["vue.volar", "vue.vscode-typescript-vue-plugin", "esbenp.prettier-vscode", "hollowtree.vue-snippets"]
+  "recommendations": ["vue.volar", "esbenp.prettier-vscode"]
 }
